--- a/src/styles/custom.styl
+++ b/src/styles/custom.styl
@@ -37,9 +37,17 @@ html, body
     padding: 2em
 
 .c
-    height 20em
+    height 20vw
+    border-radius: 2px
     background-color: alpha(#000000, .08)
     transition: background-color .5s ease-out
     &:hover
         background-color: alpha(#000000, .2)
 
+
+.code
+    padding: 1em 1.4em
+    display: inline-block
+    border-radius: 2px
+    background-color: alpha(#000000, .2)
+    color: #ffffff
